# python-fitment-api

./: .env.example  .gitignore  Dockerfile  Procfile  claude.md  entrypoint.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  run.py  test_bolt_patterns.py
app/: config.py  main.py
app/api/: deps.py  routes.py
app/dspy_modules/: conversational.py  signatures.py
app/models/: fitment.py  vehicle.py  wheel.py
app/services/: db.py  fitment_engine.py  kansei_db.py  nhtsa.py
app/tools/: nhtsa_tools.py
datafiles/: kansei_wheels.json  wheel_size_cache.json
scripts/: load_data.py
src/app/: main.py
src/chat/: context.py  streaming.py
src/core/: config.py  dependencies.py  enums.py  logging.py
src/db/: client.py  fitments.py
src/models/: fitment.py
src/prompts/: fitment_assistant.py
src/services/: dspy_fitment.py  fitment.py  kansei.py  kansei_scraper.py  rag_service.py  retrieval_cache.py  validation.py  wheel_matcher.py  wheel_size_lookup.py
src/utils/: converters.py  tire_math.py  vehicle_parsing.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20250124000000_create_fitments.sql  20250124000001_update_search_function.sql  20260124_create_kansei_wheels.sql  20260125_create_vehicle_specs.sql  20260127000000_consolidated_schema.sql  20260211000000_add_center_bore.sql  20260211000000_expand_vehicle_specs_seeds.sql  20260212000000_enhance_vehicle_specs.sql  (+2 more)
tests/: test_bolt_patterns.py  test_dspy_pipeline.py  test_fitment_deterministic.py  test_fitment_engine.py  test_fitment_queries.py  test_pipeline_e2e.py
(+7 files in other folders)
