[project]
name = "python-rag"
version = "0.1.0"
description = "Wheel fitment RAG API for helping customers find compatible wheels and tires"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dspy>=3.1.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "supabase>=2.27.2",
    "uvicorn>=0.39.0",
]



[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "ruff>=0.14.14",
]
