[project]
name = "kansei-fitment-assistant"
version = "1.0.0"
description = "AI-powered wheel fitment recommendations for Kansei Wheels"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.1.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.2",
    "uvicorn[standard]>=0.39.0",
]



[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "ruff>=0.14.14",
]
